# OrderBookMatchingEngine

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  benchmark.sh  eslint.config.js  mkdocs.yaml  pyproject.toml  skills-lock.json
.github/workflows/: bump-version.yaml  pr-labels-semver.yaml  release.yaml  workflow.yaml
.superpowers/sdd/: task-2-report.md
docs/: 404.html  index.html  objects.inv
docs/codebase/: ARCHITECTURE.md  CONVENTIONS.md  INTEGRATIONS.md
docs/codebase/ARCHITECTURE/: index.html
docs/codebase/CONCERNS/: index.html
docs/codebase/CONVENTIONS/: index.html
docs/codebase/INTEGRATIONS/: index.html
docs/codebase/STACK/: index.html
docs/codebase/STRUCTURE/: index.html
docs/codebase/TESTING/: index.html
docs/reference/SUMMARY/: index.html
docs/reference/order_matching/api/app/: index.html
docs/reference/order_matching/api/dependencies/: index.html
docs/reference/order_matching/api/models/converters/: index.html
docs/reference/order_matching/api/models/requests/: index.html
docs/reference/order_matching/api/models/responses/: index.html
docs/reference/order_matching/api/routes/cancel_order/: index.html
docs/reference/order_matching/api/routes/get_orders/: index.html
docs/reference/order_matching/api/routes/get_trades/: index.html
docs/reference/order_matching/api/routes/match/: index.html
docs/reference/order_matching/api/routes/place/: index.html
docs/reference/order_matching/api/routes/reset/: index.html
docs/reference/order_matching/api/routes/root/: index.html
docs/reference/order_matching/api/routes/summary/: index.html
docs/reference/order_matching/api/utils/: index.html
docs/reference/order_matching/enums/: index.html
docs/reference/order_matching/executed_trades/: index.html
docs/reference/order_matching/exporters/base/: index.html
docs/reference/order_matching/exporters/polars/: index.html
docs/reference/order_matching/matching_engine/: index.html
docs/reference/order_matching/order/: index.html
docs/reference/order_matching/order_book/: index.html
docs/reference/order_matching/orders/: index.html
docs/reference/order_matching/random/: index.html
docs/reference/order_matching/schemas/: index.html
docs/reference/order_matching/simulation/market/: index.html
docs/reference/order_matching/simulation/market_view/: index.html
docs/reference/order_matching/simulation/news_feed/: index.html
docs/reference/order_matching/simulation/traders/base/: index.html
docs/reference/order_matching/simulation/traders/noise/: index.html
docs/reference/order_matching/trade/: index.html
docs/search/: search_index.json
docs_src/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
examples/: api_backtesting.py
openspec/changes/archive/2026-07-02-migrate-pandas-to-polars/: design.md
openspec/changes/archive/2026-07-02-migrate-pandas-to-polars/specs/pandera-polars-validation/: spec.md
openspec/changes/archive/2026-07-15-fastapi-server/: README.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-fastapi-server/specs/fastapi-server/: spec.md
openspec/changes/archive/2026-07-16-separate-placement-and-matching/: README.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-candlestick-chart/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-22-candlestick-chart/specs/candlestick-visualization/: spec.md
openspec/changes/candlestick-chart/: README.md
openspec/changes/fastapi-server/: design.md  tasks.md
openspec/changes/migrate-pandas-to-polars/: proposal.md  tasks.md
openspec/changes/separate-placement-and-matching/: design.md  tasks.md
openspec/changes/separate-placement-and-matching/specs/fastapi-server/: spec.md
openspec/specs/candlestick-visualization/: spec.md
openspec/specs/data-exporter/: architecture.md
openspec/specs/fastapi-server/: spec.md
openspec/specs/frontend-ui/: spec.md
openspec/specs/market-simulation/: spec.md  todo.md
openspec/specs/market-simulation-integration/: plan.md  spec.md  todo.md
openspec/specs/polars-dataframe-conversion/: spec.md
src/: AGENTS.md
src/order_matching/: AGENTS.md  enums.py  executed_trades.py  matching_engine.py  order.py  order_book.py  orders.py  schemas.py  trade.py
src/order_matching/api/: AGENTS.md  __init__.py  app.py  dependencies.py  routes.py  utils.py
src/order_matching/api/models/: __init__.py  converters.py  requests.py  responses.py
src/order_matching/api/routes/: __init__.py  cancel_order.py  get_orders.py  get_trades.py  match.py  place.py  place_orders.py  reset.py  root.py  summary.py
src/order_matching/api/static/: api.js  app.js  candlestick.js  chart.js  index.html  styles.css  ui.js
src/order_matching/exporters/: AGENTS.md  __init__.py  base.py  polars.py
src/order_matching/simulation/: AGENTS.md  __init__.py  market.py  market_view.py  news_feed.py  noise_trader.py
src/order_matching/simulation/traders/: base.py  noise.py
superpowers/specs/: 2026-07-06-exporter-architecture-design.md
tasks/: plan.md
tests/: AGENTS.md  conftest.py  test_enums.py  test_executed_trades.py  test_execution.py  test_exporter_base.py  test_matching_engine.py  test_order.py  test_order_book.py  test_orders.py  test_side.py  test_status.py  test_trade.py
tests/test_api/: conftest.py  test_cancel_order.py  test_get_orders.py  test_get_trades.py  test_match.py  test_place.py  test_place_orders.py  test_reset.py  test_simulation_api.py  test_summary.py  test_workflows.py
tests/test_exporters/: test_polars_exporter.py
tests/test_simulation/: __init__.py  test_base_trader.py  test_market.py  test_market_view.py  test_news_feed.py  test_noise_trader.py
tests/test_simulation/test_traders/: test_base.py  test_noise.py
tests/test_simulation/traders/: test_noise.py
