[project]
name = "order-matching"
version = "0.3.12"
description = "Order Book Matching Engine"
authors = [
  { name = "Stanislav Khrapov", email = "khrapovs@gmail.com" },
  { name = "Akanksha Toshniwal", email = "akanksha.toshniwal@chintai.io" },
  { name = "Shannen Tioniwar", email = "shannen.tioniwar@chintai.io" },
]
readme = "README.md"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "faker>=33.0.0",
    "pandas>=2.2.3",
    "pandera>=0.21.0",
]

[dependency-groups]
test = [
    "pytest>=8.3.3",
    "pytest-benchmark[histogram]>=5.1.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.6.1",
]
doc = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
  "mkdocs-macros-plugin",
  "pymdown-extensions",
]
dev = [
    "prek>=0.2.30",
]

[project.urls]
Source = "https://github.com/khrapovs/OrderBookMatchingEngine"
Documentation = "https://order-book-matching-engine.readthedocs.io/"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --doctest-modules --doctest-glob='*.md' -n=auto --benchmark-disable"
testpaths = ["tests", "src", "README.md"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "D", "B", "I", "ARG"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D213",
  "D417",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.commitizen]
version_scheme = "semver"
version_provider = "uv"
update_changelog_on_bump = true
